<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:id="@+id/etQuery" android:hint="@string/buscar_locaci_n"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnBuscar" android:text="@string/buscar"
        android:layout_marginTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <ProgressBar android:id="@+id/progress"
        android:layout_marginTop="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone"/>
    <TextView android:id="@+id/tvEmpty" android:text="@string/sin_resultados"
        android:layout_marginTop="8dp" android:visibility="gone"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/tvError" android:text="@string/error"
        android:layout_marginTop="8dp" android:visibility="gone"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLocations"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:visibility="gone"/>
</LinearLayout>
